--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase-admin": "^10.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-simple-storage": "^1.4.2",
